--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ https://www.tooplate.com/view/2125-artxibition
                 <div class="col-lg-4">
                     <div class="venue-item">
                         <div class="thumb">
-                            <img src="https://media.istockphoto.com/id/1298329918/photo/birthday-celebratory-toast-with-string-lights-and-champagne-silhouettes.jpg?s=612x612&amp;w=0&amp;k=20&amp;c=PaDeMR5-r0NdlxghuVF9tRqR5XkCdNdTzxrkofv0Syk=" alt="">
+                            <img src="https://images.pexels.com/photos/3249760/pexels-photo-3249760.jpeg?cs=srgb&dl=pexels-edoardo-tommasini-3249760.jpg&fm=jpg" alt="">
                         </div>
                         <div class="down-content">
                             <div class="left-content">
