changing picture again

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ https://www.tooplate.com/view/2125-artxibition
                 <div class="col-lg-4">
                     <div class="venue-item">
                         <div class="thumb">
-                            <img src="https://images.pexels.com/photos/3249760/pexels-photo-3249760.jpeg?cs=srgb&dl=pexels-edoardo-tommasini-3249760.jpg&fm=jpg" alt="">
+                            <img src="../WDproject/images/party.jpg" alt="">
                         </div>
                         <div class="down-content">
                             <div class="left-content">
