--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@ https://www.tooplate.com/view/2125-artxibition
                 <div class="col-lg-4">
                     <div class="venue-item">
                         <div class="thumb">
-                            <img src="https://media.npr.org/assets/img/2022/11/04/gettyimages-1183414292-1-_slide-edff8c3fe6afcab5c6457e3c7bd011f5c1745161-s1100-c50.jpg" alt="">
+                            <img src="../WDproject/assets/images/party.jpg"alt="">
                         </div>
                         <div class="down-content">
                             <div class="left-content">
